# pi_frame_eink_full

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  collect_scripts.py  final_hardening.sh  install_all_pi.sh  install_env.sh  install_sd_card_reader.sh  usefull_commands.py
docs/: conventions.md  index.md  pi-install-guide.md  pi-monitoring-guide.md
docs/architecture/: data-flow.md  deployment.md  hardening-summary.md  index.md  overview.md
docs/bugs/: B-001-race-condition-sd-monitor.md  B-002-image-dimension-docs-mismatch.md  B-003-wifi-password-in-logs.md  B-004-subprocess-injection-sync.md  B-005-unused-gpiozero-import.md  B-006-s3-folder-input-commented-out.md  index.md
docs/services/: epaper-display.md  hardening.md  image-ui.md  index.md  s3-sync.md  sd-mount.md  settings-ui.md
docs/tickets/: T-001-credential-cleanup.md  T-002-gitignore-cleanup.md  T-003-unit-tests-and-makefiles.md  T-004-settings-path-standardization.md  T-005-env-var-standardization.md  T-006-shared-settings-module.md  T-007-missing-module-readmes.md  T-008-systemd-sandboxing.md  T-009-os-network-hardening.md  T-010-pi-install-guide.md  T-011-os-card-portability.md  index.md
eInkFrameWithStreamlitMananger/: .env.example  Makefile  README.md  display_manager.py  frame_manager.py  image_converter.py  pollock_text.py  pyproject.toml  sd_monitor.py  settings_loader.py  setup.sh
eInkFrameWithStreamlitMananger/tests/: conftest.py  test_image_converter.py  test_s3_manager.py  test_sd_monitor.py
infrastructure/cloudformation/admin-role/: .gitignore  README.md  admin-role.yml  parameters.example.json
infrastructure/terraform/imageuiapp/: .gitignore  README.md  ec2.tf  iam.tf  main.tf  outputs.tf  s3.tf  terraform.tfvars.example  variables.tf
pi-s3-sync/: .gitignore  Makefile  README.md  install.sh  pyproject.toml  wifi.json.example
pi-s3-sync/scripts/: sync_s3_from_sd.py
pi-s3-sync/systemd/: sd-s3-sync.service  sd-s3-sync.timer
pi-s3-sync/tests/: test_sync_s3_from_sd.py
s3_image_croper_ui_app/: EC2_DIRECT_AUTH.md  ELB_AUTH.md  README.md  install_as.sh  install_as_aws_linux.sh  install_as_aws_linux_caddy.sh  install_env.sh  install_settings.sh
s3_image_croper_ui_app/ImageUiApp/: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
s3_image_croper_ui_app/ImageUiApp/.streamlit/: secrets.toml.example
s3_image_croper_ui_app/ImageUiApp/imageuiapp/: app.py  main.py
s3_image_croper_ui_app/ImageUiApp/imageuiapp/data/: intro.md  wifi.json
s3_image_croper_ui_app/ImageUiApp/imageuiapp/tabs/: downloads_tab.py  file_tab.py  info_tab.py  view_tab.py
s3_image_croper_ui_app/ImageUiApp/tests/: test_cropping.py
s3_image_croper_ui_app/SettingsApp/: Makefile  README.md  pyproject.toml
s3_image_croper_ui_app/SettingsApp/settingsapp/: app.py  main.py
s3_image_croper_ui_app/SettingsApp/tests/: test_settings.py
scripts/: sd_mount_watchdog.sh
scripts/aws/: README.md  assume_admin.sh  backup_s3.sh  with_admin_role.sh
scripts/claude-skills/: README.md
scripts/claude-skills/assume-aws-admin/: SKILL.md
