[tool.poetry]
name = "s3-manager"
version = "0.1.0"
description = "Simple S3 manager with connection checks and sync utilities."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# Target Python 3.13
python = ">=3.13,<3.14"

# S3 & AWS SDK
boto3 = "^1.35.0"
moto = "^5.1.18"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pytest = "^8.0.0"
pytest-cov = "^6.0"
ruff = "^0.8"
Pillow = "^11.0.0"

[tool.mypy]
exclude = ["lib/"]

[[tool.mypy.overrides]]
module = "lib.*"
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
